--- a/Buddha/app/src/main/res/values/strings.xml
+++ b/Buddha/app/src/main/res/values/strings.xml
@@ -8,5 +8,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="all_quotes">AllQuotes</string>
+    <string name="one_quote">OneQuote</string>
+    <string name="save_changes">Save changes</string>
+    <string name="quote">Quote</string>
 
 </resources>
